change update rate

--- a/mapWebApp/mapWebApp-2.11-opt.html
+++ b/mapWebApp/mapWebApp-2.11-opt.html
@@ -7,7 +7,7 @@
             src="http://code.jquery.com/jquery-1.10.2.js"></script>
     <script src="https://maps.googleapis.com/maps/api/js"></script>
     <script type="text/javascript"
-            src="./target/scala-2.11/mission-viewer-scala-js-fastopt.js"></script>
+            src="./target/scala-2.11/mission-viewer-scala-js-opt.js"></script>
     <style>
         table tr td {
         padding: 20px;
@@ -99,8 +99,8 @@
     <!-- Syntax color -->
     <script src="_examples_data/prism/prism.js"></script>
 
-    <!-- Importing jQuery library 
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.0/jquery.min.js"></script>-->
+    <!-- Importing jQuery library -->
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.0/jquery.min.js"></script>
 
     <!-- Importing the FlightIndicators library -->
     <script src="js/jquery.flightindicators.js"></script>
@@ -128,8 +128,12 @@
   heading.setHeading(yaw);
   },1000);
 
-    </script>
+</script>
+
 </div>
+
 </div>
 </body>
+<!--<script src="js/jquery.js"></script>-->
+<script src="js/jquery.flightindicators.js"></script>
 </html>
