--- a/mapWebApp/mapWebApp-2.11-fastopt.html
+++ b/mapWebApp/mapWebApp-2.11-fastopt.html
@@ -93,6 +93,11 @@
               <td id="timestamp"></td>
             </tr>
 	  </table>
+	  <textarea rows="3" cols="70">
+	  Portuguese Air Force Academy Research Center
+	  Developer: Eloi Pereira, email: epereira@academiafa.edu.pt
+	  Drone icon created by Anthony Lui (noun project)
+	</textarea>
 	</div>
       </div>
 
