--- a/mapWebApp/mapWebApp-2.11-fastopt.html
+++ b/mapWebApp/mapWebApp-2.11-fastopt.html
@@ -43,7 +43,7 @@
        
 	<div class="col-xs-6 col-md-6">
 	      <div style="margin-left: 10px; margin-right: 10px; margin-top: 10px;  margin-bottom: 10px">
-		<video width="640" height="480" controls autoplay>
+		<video width="640" height="480" controls autoplay loop>
 		  <source src="http://62.28.239.27:8081/UAVcam.ogg" type="video/ogg">
 		    Your browser does not support the VIDEO tag and/or OGG streams.
 		</video>
